[project]
name = "quizmaster"
version = "1.0.0"
description = "QuizMaster – L'Arène du Savoir"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
]

[tool.flet]
org         = "com.quizmaster"
product     = "QuizMaster"
company     = "Groupe QuizMaster"
description = "L'Arène du Savoir – Quiz mobile Python/Flet"

[tool.flet.app]
module = "main"

[tool.flet.android]
permissions = { INTERNET = true, ACCESS_NETWORK_STATE = true }
min_sdk_version = 23
target_sdk_version = 33
