[project]
name = "quiz_master"
version = "0.1.0"
description = "Un jeu de quiz interactif multijoueur avec chronomètre et historique."
dependencies = [
    "flet>=0.25.0",
]

[tool.flet]
app_title = "Quiz Master"
product_name = "Quiz Master"
package_name = "com.example.quizmaster"

[tool.flet.android]
min_sdk_version = 24
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE"
]
